--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -107,7 +107,7 @@ airqplus_pm_copd_result <-
                 estimated_number_of_attributable_cases_upper)|>
   unlist()
 
-View(bestcost_pm_copd)
+# View(bestcost_pm_copd)
 
 check_bestcost(result_list_bestcost = bestcost_pm_copd,
                result_vector_alternative = airqplus_pm_copd_result)
@@ -726,7 +726,7 @@ bestcost_pm_yld_lifetable_geluft  <-
     dw_central = 1 #, dw_lower = 0.1, dw_upper = 10
 )
 
-View(bestcost_pm_yld_lifetable_geluft)
+# View(bestcost_pm_yld_lifetable_geluft)
 
 # The Swiss project GeLuft did not calculated the YLD, only YLL. 
 # But disability weight = 1 in the function above, then YLD = YLL 
