--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -328,6 +328,8 @@ niph_noise_ha_result <-
 bestcost_noise_ha_ar <- 
   bestcost::attribute_health_ar(
     exp_central = niph_noise_ha_input$exposure_mean,
+    # exp_lower = niph_noise_ha_input$exposure_mean - 1,
+    # exp_upper = niph_noise_ha_input$exposure_mean + 1
     pop_exp = niph_noise_ha_input$population_exposed_total, 
     erf_eq_central = "78.9270-3.1162*c+0.0342*c^2",
     info = data.frame(pollutant = "road_noise", outcome = "highly_annoyance"))
@@ -379,8 +381,34 @@ check_bestcost(result_list_bestcost = bestcost_pm_yld_singlebhd ,
 #View(bestcost_pm_yld_ci)
 ```
 
-```{r Test summary uncertainty}
-bestcost_pm_yld_singlebhd  <- 
+### Summary uncertainty
+
+```{r Test summary uncertainty rr}
+
+# Attribute health
+bestcost_pm_copd_with_summary_uncertainty <- 
+  bestcost::attribute_health(
+    exp_central = 8.85, 
+    exp_lower = airqplus_pm_copd$mean_concentration - 1,
+    exp_upper = airqplus_pm_copd$mean_concentration + 1,
+    cutoff_central = 5,
+    cutoff_lower = airqplus_pm_copd$cut_off_value - 1,
+    cutoff_upper = airqplus_pm_copd$cut_off_value + 1,
+    bhd_central = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
+    bhd_lower = (airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk) + 5000,
+    bhd_upper = (airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk) - 5000,
+    rr_central = 1.118,
+    rr_lower = 1.060, 
+    rr_upper = 1.179,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    summary_uncertainty = TRUE
+    )
+
+# View(bestcost_pm_copd_with_summary_uncertainty)
+
+# attribute_yld_from_prevalence (with disability weights)
+bestcost_pm_yld_singlebhd_with_summary_uncertainty  <- 
   bestcost::attribute_yld_from_prevalence(
     exp_central = 8.85, 
     exp_lower = airqplus_pm_copd$mean_concentration - 1,
@@ -400,9 +428,33 @@ bestcost_pm_yld_singlebhd  <-
     summary_uncertainty = TRUE
     )
 
-# View(bestcost_pm_yld_singlebhd)
+# View(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
 ```
 
+```{r Test summary uncertainty ar}
+
+# Get data
+niph_noise_ha_input <- 
+  niph_noise_ha_excel |>
+  dplyr::filter(!is.na(niph_noise_ha_excel$exposure_mean))
+
+bestcost_noise_ha_ar_with_summary_uncertainty <- 
+  bestcost::attribute_health_ar(
+    exp_central = niph_noise_ha_input$exposure_mean,
+    exp_lower = niph_noise_ha_input$exposure_mean - 1,
+    exp_upper = niph_noise_ha_input$exposure_mean + 1,
+    pop_exp = niph_noise_ha_input$population_exposed_total, 
+    erf_eq_central = "78.9270-3.1162*c+0.0342*c^2",
+    info = data.frame(pollutant = "road_noise", outcome = "highly_annoyance"),
+    summary_uncertainty = TRUE)
+
+# View(bestcost_noise_ha_ar_with_summary_uncertainty$detailed$uncertainty)
+
+print("Summary uncertainty central estimate: ")
+bestcost_noise_ha_ar_with_summary_uncertainty[["detailed"]][["uncertainty"]]$central_estimate
+print("Main estimate: ")
+bestcost_noise_ha_ar[["main"]][["impact_rounded"]]
+```
 
 ### Multiple exposure
 
